--- a/index.html
+++ b/index.html
@@ -80,7 +80,9 @@
             <button
               class="border border-gray-700 px-6 py-2 rounded-sm cursor-pointer hover:bg-gray-700 hover:text-white"
             >
-              <a href="./assets/file.txt" download> Download CV </a>
+              <a href="./assets/resume-ritesh-chaudhary.pdf" download>
+                Download CV
+              </a>
             </button>
             <button
               class="border bg-gray-700 text-white px-6 py-2 rounded-sm cursor-pointer hover:bg-gray-800"
