--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
             alt="project_travel_website"
             class="w-full h-[70%] object-cover object-top border-b border-gray-300"
           />
-          <p class="heading2 mb-2 mt-4 font-medium">Travel Agency</p>
+          <p class="heading2 mb-2 mt-4 font-medium">Travel Website</p>
           <div class="flex gap-4 mt-2">
             <a
               href="https://github.com/riteshchaudhary375/travel-agency"
