--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
       <!-- Mobile Menu Button -->
       <button class="md:hidden cursor-pointer" onclick="handleMenu()">
         <img
-          src="../assets/menu-svgrepo-com.svg"
-          alt="menu_button"
+          src=""
+          alt="menu"
           class="w-9 h-9"
         />
       </button>
