adding menu icon

--- a/index.html
+++ b/index.html
@@ -25,11 +25,7 @@
 
       <!-- Mobile Menu Button -->
       <button class="md:hidden cursor-pointer" onclick="handleMenu()">
-        <img
-          src=""
-          alt="menu"
-          class="w-9 h-9"
-        />
+        <img src="./assets/menu-svgrepo-com.svg" alt="menu" class="w-9 h-9" />
       </button>
 
       <!-- Mobile Menu List -->
