add latest project used technology of  html, css, javascript, swiper.js and slick.js

--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
         </div>
 
         <!-- Project 4 - Calculator App -->
-        <div
+        <!-- <div
           class="w-full h-[500px] border border-gray-300 rounded-sm overflow-hidden flex flex-col gap-2 items-center"
         >
           <img
@@ -281,6 +281,40 @@
               </button>
             </a>
             <a href="https://calculator-ye9m.onrender.com/" target="_blank">
+              <button
+                class="w-[100px] border border-gray-700 px-6 py-2 rounded-sm cursor-pointer hover:bg-gray-700 hover:text-white"
+              >
+                Live
+              </button>
+            </a>
+          </div>
+        </div> -->
+
+        <!-- Project 4 - mychoice landing page -->
+        <div
+          class="w-full h-[500px] border border-gray-300 rounded-sm overflow-hidden flex flex-col gap-2 items-center"
+        >
+          <img
+            src="./assets/mychoice-thumbnail.PNG"
+            alt="project_calculator_app"
+            class="w-full h-[70%] object-cover object-top border-b border-gray-300"
+          />
+          <p class="heading2 mb-2 mt-4 font-medium">mychoice. website</p>
+          <div class="flex gap-4 mt-2">
+            <a
+              href="https://github.com/riteshchaudhary375/mychoice"
+              target="_blank"
+            >
+              <button
+                class="w-[100px] border border-gray-700 px-6 py-2 rounded-sm cursor-pointer hover:bg-gray-700 hover:text-white"
+              >
+                GitHub
+              </button>
+            </a>
+            <a
+              href="https://riteshchaudhary375.github.io/mychoice/"
+              target="_blank"
+            >
               <button
                 class="w-[100px] border border-gray-700 px-6 py-2 rounded-sm cursor-pointer hover:bg-gray-700 hover:text-white"
               >
