in build process

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             <button
               class="border border-gray-700 px-6 py-2 rounded-sm cursor-pointer hover:bg-gray-700 hover:text-white"
             >
-              <a href="./assets/resume_ritesh_chaudhary_2025.pdf" download>
+              <a href="./assets/resume_ritesh_chaudhary_2025.pdf">
                 Download CV
               </a>
             </button>
@@ -182,7 +182,7 @@
                 GitHub
               </button>
             </a>
-            <a href="https://blogpoint-yw3m.onrender.com/" target="_blank">
+            <a href="#" target="_blank">
               <button
                 class="w-[100px] border border-gray-700 px-6 py-2 rounded-sm cursor-pointer hover:bg-gray-700 hover:text-white"
               >
@@ -218,7 +218,7 @@
                 GitHub
               </button>
             </a>
-            <a href="https://mern-auth-46dx.onrender.com/" target="_blank">
+            <a href="#" target="_blank">
               <button
                 class="w-[100px] border border-gray-700 px-6 py-2 rounded-sm cursor-pointer hover:bg-gray-700 hover:text-white"
               >
@@ -311,10 +311,7 @@
                 GitHub
               </button>
             </a>
-            <a
-              href="https://riteshchaudhary375.github.io/mychoice/"
-              target="_blank"
-            >
+            <a href="#" target="_blank">
               <button
                 class="w-[100px] border border-gray-700 px-6 py-2 rounded-sm cursor-pointer hover:bg-gray-700 hover:text-white"
               >
@@ -345,10 +342,7 @@
                 GitHub
               </button>
             </a>
-            <a
-              href="https://riteshchaudhary375.github.io/layout/index.html"
-              target="_blank"
-            >
+            <a href="#" target="_blank">
               <button
                 class="w-[100px] border border-gray-700 px-6 py-2 rounded-sm cursor-pointer hover:bg-gray-700 hover:text-white"
               >
@@ -379,10 +373,7 @@
                 GitHub
               </button>
             </a>
-            <a
-              href="https://riteshchaudhary375.github.io/travel-agency/#"
-              target="_blank"
-            >
+            <a href="#" target="_blank">
               <button
                 class="w-[100px] border border-gray-700 px-6 py-2 rounded-sm cursor-pointer hover:bg-gray-700 hover:text-white"
               >
